Clean up JS part of the code: meaningful names and locations

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -11,6 +11,6 @@
        <div class="container">
           <div id="app"></div>
        </div>
-      <script src="/index.js"></script>
+      <script src="/tictactoe.js"></script>
    </body>
 </html>
