--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,6 @@
 .board {
-    width: 450px;
-    height: 450px;
+    width: 468px;
+    height: 468px;
 }
 .square {
     display: flex;
@@ -10,9 +10,44 @@
     height: 150px;
     float: left;
     font-size: 75px;
+    border-radius: 15px;
+    color: #fff;
+    margin: 3px 3px;
+
+    background-color: #78bec5;
+    -webkit-transition: background-color 0.3s ease-in;
+    -moz-transition: background-color 0.3s ease-in;
+    -o-transition: background-color 0.3s ease-in;
+    -ms-transition: background-color 0.3s ease-in;
+    transition: background-color 0.3s ease-in;
+ }
+
+button.square {
+    border-color: transparent;
+    border-style: solid;
 }
+
+button.square:focus {
+    outline: 0;
+    box-shadow: none;
+}
+
+.square:hover {
+    background-color: #3d4250;
+    color: #ccc;
+}
+
+/* This is to make sure occupied cells no longer change color */
+.square.player-x, .square.player-x:hover {
+    background-color: #dc685a;
+}
+.square.player-o, .square.player-o:hover {
+    background-color: #ecaf4f;
+}
+
 
 .fa {
     margin-left: auto;
     margin-right: auto;
+    color: white;
 }
